use native display element fix word break on displaying errors with logs

--- a/app/css/index.css
+++ b/app/css/index.css
@@ -994,6 +994,10 @@ input[type='password']:autofill {
 	white-space: pre-wrap;
 }
 
+.break-words {
+	overflow-wrap: break-word;
+}
+
 .rounded {
 	border-radius: 0.25rem;
 }
@@ -1469,6 +1473,11 @@ input[type='password']:autofill {
 	backdrop-filter: var(--tw-backdrop-blur) var(--tw-backdrop-brightness) var(--tw-backdrop-contrast) var(--tw-backdrop-grayscale) var(--tw-backdrop-hue-rotate) var(--tw-backdrop-invert) var(--tw-backdrop-opacity) var(--tw-backdrop-saturate) var(--tw-backdrop-sepia);
 }
 
+.before\:content-\[\"Show\"\]::before {
+	--tw-content: 'Show';
+	content: var(--tw-content);
+}
+
 .focus-within\:border-red-400:focus-within {
 	--tw-border-opacity: 1;
 	border-color: rgb(248 113 113 / var(--tw-border-opacity));
@@ -1586,6 +1595,21 @@ input[type='password']:autofill {
 
 .group:hover .group-hover\:block {
 	display: block;
+}
+
+.groupopen .group-\[open\]\:bg-red-500 {
+	--tw-bg-opacity: 1;
+	background-color: rgb(239 68 68 / var(--tw-bg-opacity));
+}
+
+.group:is([open]) .group-\[\:is\(\[open\]\)\]\:bg-red-500 {
+	--tw-bg-opacity: 1;
+	background-color: rgb(239 68 68 / var(--tw-bg-opacity));
+}
+
+.group:is([open]) .group-\[\:is\(\[open\]\)\]\:before\:content-\[\"Hide\"\]::before {
+	--tw-content: 'Hide';
+	content: var(--tw-content);
 }
 
 .peer:checked ~ .peer-checked\:hidden {
